Intermediate work for v0.2.0

--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0 - Reality Virtualization (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0 - Reality Virtualization (index).md
@@ -9,41 +9,154 @@ tags:
 # 00.0 - Reality Virtualization (meta)
 
 > Virtualize the ontological core into clear, operable abstractions before formal APIs.
+> Bridge technical and humane registers to maintain both precision and humanity.
+
+Onboarding: Read [PRINCIPLES.md](../../../../PRINCIPLES.md) and [ROADMAP.md](../../../../ROADMAP.md). Dual‑register mapping (technical ↔ humane) is required in this layer.
 
 ---
 
-## Purpose
+## Scope
 
-Express ∆, R(·), ⊚, and SVA modulators using network-native terminology so they can be reasoned about and linked to domains without premature formalization.
-
----
-
-## Modules
-
-- **00.0.0 - Virtual Substrate — Kernel Primitives**
-  ∆ (Difference), R(·) (Relational Embedding), ⊚ (Stabilization/Closure), Form (F); closure semantics.
-  Anchor: ∇S.
-
-- **00.0.1 - Execution Environment — Ports & Boundaries**
-  Interfaces, ingress/egress, thresholds, receptivity, isolation surfaces.
-  Anchor: λV.
-
-- **00.0.2 - Coherence Orchestration — Identity & Memory**
-  Phase alignment, identity retention, synchronization, persistence under perturbation.
-  Anchor: ψA.
+Express core primitives and modulators through dual-register mapping:
+1. Technical systems (network/computational)
+2. Lived experience (biological/relational)
+3. Explicit bridges between registers
 
 ---
 
-## Principles
+## Dual‑register mapping
 
-- Kernel-first: stabilize primitives and modulators as a minimal [ABI](https://en.wikipedia.org/wiki/Application_binary_interface)
-- Vocabulary-first: use virtualization terms to bridge into APIs later
-- Stability via tags: `#status/seed` → `#status/unstable` → `#status/stable`
+Map the virtualization layer into both registers and show the bridge explicitly.
+
+### Technical (network/computational)
+
+| Layer concept | Network construct | Interface example |
+|--------------|------------------|-------------------|
+| Primitives | Core operations | `Delta`, `Embed`, `Close` |
+| Environment | Boundaries | `Port`, `Gate`, `Surface` |
+| Coherence | Synchronization | `Phase`, `Memory`, `Select` |
+
+### Humane (biological/relational)
+
+| Layer concept | Humane construct | Example |
+|--------------|------------------|----------|
+| Primitives | Basic experience | Notice, Connect, Hold |
+| Environment | Living boundary | Meet, Share, Protect |
+| Coherence | Living rhythm | Dance, Remember, Choose |
+
+### Crosswalk (bridge)
+
+| Technical term | Humane term | Ontological meaning |
+|---------------|-------------|-------------------|
+| Operation | Experience | How difference moves |
+| Interface | Boundary | Where systems meet |
+| State | Memory | What persists |
+
+---
+
+## Module Structure
+
+Three core modules with their anchoring modulators:
+
+1. **Virtual Substrate (00.0.0)**
+   - Primitives: ∆, R(·), ⊚, Form
+   - Anchor: ∇S (Structure)
+   - Role: Core operations
+
+2. **Execution Environment (00.0.1)**
+   - Focus: Ports, boundaries, thresholds
+   - Anchor: λV (Void)
+   - Role: Interface control
+
+3. **Coherence Orchestration (00.0.2)**
+   - Focus: Phase, identity, memory
+   - Anchor: ψA (Awareness)
+   - Role: Stability maintenance
+
+---
+
+## Core Operations
+
+The virtualization layer provides three key capabilities:
+
+1. **Primitive Operations**
+   - Technical: Core transforms and closures
+   - Humane: Basic patterns of experience
+
+2. **Boundary Management**
+   - Technical: Interface control and protection
+   - Humane: Safe sharing and connection
+
+3. **Coherence Control**
+   - Technical: State and synchronization
+   - Humane: Memory and rhythm
+
+---
+
+## Stability Principles
+
+1. **Dual-register stability**
+   - Every technical mapping needs a humane counterpart
+   - Explicit bridges between registers
+   - Neither register reducible to the other
+
+2. **Kernel-first development**
+   - Stabilize primitives before building up
+   - Minimal but complete ABI
+   - Clear operational semantics
+
+3. **Vocabulary-first bridging**
+   - Use virtualization terms consistently
+   - Bridge into APIs later
+   - Maintain term stability
+
+4. **Progressive stabilization**
+   - Track status: seed → unstable → stable
+   - Test both registers
+   - Verify bridges
+
+---
+
+## Design Rationale
+
+This virtualization layer is deliberately **bi-polar**:
+
+- The **technical register** ensures the ontology can bind to computational, network, and formal systems.
+- The **biological register** ensures the ontology remains connected to lived, embodied, and emotional experience.
+
+These poles **must** coexist for stability. Humans are not reducible to graphs, and technical systems cannot be meaningfully reduced to biological metaphors. The bridge exists to preserve **structural fidelity** while avoiding dehumanization or over-naturalization of technology. Removing either pole would collapse the model's scope and distort its ethical grounding.
+
+---
+
+## Implementation Strategy
+
+1. **Primitive Layer**
+   - Define core operations
+   - Test both registers
+   - Establish bridges
+
+2. **Environment Layer**
+   - Build on primitives
+   - Define interfaces
+   - Control boundaries
+
+3. **Coherence Layer**
+   - Ensure stability
+   - Manage memory
+   - Maintain identity
 
 ---
 
 ## See Also
 
 - [[00 - Translation Layer (meta)]]
-- [[Field]] · [[Void]] · [[Structure]] · [[Awareness]]
-- [[types]] · [[tags]]
+- [[Structure]] · [[Void]] · [[Awareness]]
+- [[PRINCIPLES]] · [[ROADMAP]]
+
+---
+
+## Dual‑register checklist
+
+- [x] Technical mapping provided
+- [x] Humane mapping provided
+- [x] Crosswalk table included
