--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0 - Virtual Substrate — Kernel Primitives (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0 - Virtual Substrate — Kernel Primitives (index).md
@@ -2,32 +2,123 @@
 type: meta
 tags:
   - "#layer/translation"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
 # 00.0.0 - Virtual Substrate — Kernel Primitives (meta)
 
-> Kernel abstractions: ∆, R(·), ⊚, and Form (F); closure semantics and structural conditions.
+> Core primitives that form the kernel: ∆ (difference), R(·) (embedding), ⊚ (closure), and F (form).
+> These primitives work together to enable difference to become stable structure.
 
 ---
 
 ## Scope
 
-- ∆ (Primitive Difference)
-- R(·) (Relational Embedding)
-- ⊚ (Stabilization / Closure)
-- F (Form) and boundary conditions
+The kernel primitives provide the foundational operations for transforming difference into form:
+
+1. ∆ (Primitive Difference) — irreducible distinction
+2. R(·) (Relational Embedding) — contextual situation
+3. ⊚ (Stabilization/Closure) — coherence lock
+4. F (Form) — stable outcome
 
 ---
 
-## Anchors
+## Dual‑register mapping
 
-- ∇S — Sarkisian Differentiation Gradient (Structure)
+Map the kernel into both registers and show the bridge explicitly.
+
+### Technical (network/computational)
+
+| Primitive | Network construct | Interface example |
+|-----------|------------------|-------------------|
+| ∆ | Event detection | `ChangeDetector` |
+| R(·) | Graph topology | `ContextGraph` |
+| ⊚ | Control loop | `SessionCloser` |
+| F | Stable session | `IdentityTracker` |
+
+### Humane (biological/relational)
+
+| Primitive | Humane construct | Example |
+|-----------|-----------------|---------|
+| ∆ | First noticing | "Something's different" |
+| R(·) | Web of relations | "How things connect" |
+| ⊚ | Habit formation | "It sticks now" |
+| F | Living pattern | "This is the shape" |
+
+### Crosswalk (bridge)
+
+| Technical term | Humane term | Ontological meaning |
+|---------------|-------------|-------------------|
+| Event | Noticing | First distinction |
+| Topology | Web | How difference sits |
+| Loop | Habit | What keeps stable |
+| Session | Pattern | Persistent form |
+
+---
+
+## Domain Mapping
+
+Brief examples across domains showing both technical and humane angles:
+
+| Domain | Technical flow | Humane flow |
+|--------|---------------|-------------|
+| Physics | Event → Field → Lock → State | Split → Connect → Hold → Shape |
+| Chemistry | Site → Context → Bond → Molecule | Change → Mix → Join → Substance |
+| Biology | Signal → Path → Set → Identity | Sense → Network → Learn → Life |
+| Social | Message → Graph → Agree → Group | Hello → Friends → Trust → Bond |
+| Economy | Trade → Market → Clear → Position | Value → Flow → Lock → Asset |
+| Politics | Motion → Power → Law → Institution | Move → Web → Rule → Body |
+| Networks | Change → Route → Commit → State | Input → Path → Fix → Known |
+| Cognition | Input → Context → Memory → Concept | Notice → Link → Learn → Know |
+
+---
+
+## Kernel Flow
+
+The primitives form a canonical sequence:
+
+1. ∆ (Difference) provides the initial distinction
+2. R(·) (Embedding) situates it in context
+3. ⊚ (Closure) evaluates for stability
+4. F (Form) emerges if closure succeeds
+
+This flow is modulated by:
+- ∇S — controls structural differentiation
+- λV — sets interface sensitivity
+- ψA — maintains phase coherence
+
+---
+
+## Axiom Mapping
+
+Each primitive expresses core axioms:
+
+| Primitive | Primary axiom | Supporting axioms |
+|-----------|--------------|-------------------|
+| ∆ | A1 (Irreducibility) | A2 (Asymmetry) |
+| R(·) | A2 (Asymmetry) | A3 (Recursivity) |
+| ⊚ | A3 (Recursivity) | A1 (Irreducibility) |
+| F | All three | - |
+
+---
+
+## Design rationale
+
+The kernel primitives must be intelligible in both technical and humane registers per governance (see [PRINCIPLES.md](../../../../PRINCIPLES.md)). Each primitive maintains its dual nature without reduction to either register.
 
 ---
 
 ## See Also
 
-- [[Field]] · [[Void]] · [[Structure]] · [[Awareness]]
-- [[types]] · [[tags]]
+- [[00.0.0.1 - Anchors — Constants & Modulators (index)]]
+- [[00.0.0.2 - Structural Primitives (index)]]
+- [[Structure]] · [[Void]] · [[Awareness]]
+
+---
+
+## Dual‑register checklist
+
+- [x] Technical mapping provided
+- [x] Humane mapping provided
+- [x] Crosswalk table included
