--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (index).md
@@ -2,35 +2,113 @@
 type: meta
 tags:
   - "#layer/translation"
-  - "#status/unstable"
+  - "#status/seed"
   - "#function/observation"
 ---
 
 # 00.0.0.0 - Core Axioms (meta)
 
-> Foundational statements that ground the kernel. This index is unstable and will change as subfolders/axioms are added.
+> Foundational statements that ground the kernel. These axioms constrain primitives and interfaces.
 
 ---
 
-## Purpose
+## Scope
 
-Collect and index axioms (e.g., “Difference precedes Form”) that constrain primitives and interfaces.
+- Core ontological axioms (A1-A3) that define the irreducible base
+- SVA triad mapping and constant emergence
+- Axiom dependencies and implications
+- Axiom-to-primitive mappings
 
 ---
 
-## Contents (to be expanded)
+## SVA Triad Mapping
 
-- [[A1 — Irreducibility (axiom)]] — ∆ cannot be decomposed without loss
-- [[A2 — Asymmetry (axiom)]] — order matters: ∆(A,B) ≠ ∆(B,A)
-- [[A3 — Recursivity (axiom)]] — forms arise via recursive embedding and closure
+| Axiom | Polarity | Domain | Core Role |
+|-------|----------|---------|-----------|
+| A1 (Irreducibility) | P0 | Awareness | Distinction itself |
+| A2 (Asymmetry) | P- | Void | Field directionality |
+| A3 (Recursivity) | P+ | Structure | Form-making |
+
+---
+
+## Anchors & Emergence
+
+Primary constants (direct):
+- A1 → ε (resolution quantum)
+- A2 → φ (stabilization ratio)
+- A3 → e (transformation rate)
+
+Emergent constants (derived):
+- A2 → c (propagation limit)
+- A3 → π (closure geometry)
+
+---
+
+## Dual‑register mapping
+
+Map the axioms into both registers and show the bridge explicitly.
+
+### Technical (network/computational)
+
+| Module concept | Network construct (Target) | Interface/API example |
+|----------------|---------------------------|----------------------|
+| Irreducibility | Atomic event              | `PrimitiveEvent`    |
+| Asymmetry      | Directed edge             | `DirectedLink`      |
+| Recursivity    | Nested closure            | `RecursiveWrapper`  |
+
+### Humane (biological/relational)
+
+| Module concept | Humane construct (Target) | Example |
+|----------------|---------------------------|---------|
+| Irreducibility | Basic sensation           | Raw perception before analysis |
+| Asymmetry      | Role/context dependence   | Parent-child vs child-parent |
+| Recursivity    | Pattern recognition       | "I see what you mean" |
+
+### Crosswalk (bridge)
+
+| Technical term | Humane term | Ontological meaning                    |
+|----------------|-------------|----------------------------------------|
+| Atomic event   | Raw sensation | Irreducible unit of difference       |
+| Directed link  | Role context  | Asymmetric embedding of difference   |
+| Nested closure | Recognition   | Recursive stabilization of patterns  |
+
+---
+
+## Design rationale
+
+These axioms establish the minimal foundation needed for difference-based recursion. See [PRINCIPLES.md](../../../../../PRINCIPLES.md) for how they avoid reduction (biology ≠ networks; tech ≠ biology).
+
+---
+
+## Dual‑register checklist
+
+- [x] Technical mapping provided
+- [x] Humane mapping provided
+- [x] Crosswalk table included
+
+---
+
+## Domain Mapping (optional)
+
+Brief manifestations across domains, showing SVA triad alignment:
+
+| Domain | Structure (A3) | Void (A2) | Awareness (A1) |
+|--------|---------------|------------|----------------|
+| Physics | Wave patterns | Field propagation | Quantum measurement |
+| Chemistry | Molecular structure | Reaction paths | Bonding states |
+| Biology | Growth forms | Environmental flow | Sensory distinction |
+| Social | Community patterns | Influence paths | Identity recognition |
+| Economy | Market structure | Value flows | Price discovery |
+| Politics | Institutions | Power dynamics | Cultural awareness |
+| Networks | Graph topology | Message routing | State coherence |
+| Cognition | Memory patterns | Attention flow | Conscious distinction |
 
 ---
 
 ## See Also
 
 - [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
-- [[Field]]
-- [[Void]]
-- [[Structure]]
-- [[Awareness]]
-- [[20.1.1 - Schemas & Conventions (index)]]
+- [[A1 — Irreducibility (axiom)]]
+- [[A2 — Asymmetry (axiom)]]
+- [[A3 — Recursivity (axiom)]]
+- [[Field]] · [[Void]] · [[Structure]] · [[Awareness]]
