--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (index).md
@@ -2,82 +2,122 @@
 type: meta
 tags:
   - "#layer/translation"
-  - "#status/unstable"
+  - "#status/stable"
   - "#function/observation"
 ---
 
-# 00.0.0.1 - Anchors — Constants & Modulators (meta)
+# 00.0.0.1 - Anchors — Constants & Modulators (index)
 
-> Canonical anchors: numeric constants and SVA modulators. This index is unstable and will change as subfolders/notes are added.
-
----
-
-## Purpose
-
-Group **constants** (π, e, φ) and **modulators** (∇S, λV, ψA) that anchor the kernel across domains.
+> Canonical anchors: numeric constants and SVA modulators that stabilize the kernel across domains.
 
 ---
 
-## Ordering policy (folder index)
+## Scope
 
-- Constants first, then modulators
-  - Kernel constants (5): ε, π, e, φ, c
-    - ε — global quantum of difference (meta‑constant)
-    - π, e, φ — structural geometry/growth/asymmetry
-    - c — max propagation speed (concept; domain instances carry values)
-  - Domain/derived constants live in their domains (link only from here)
-- Modulators (S/V/A) listed after constants in S → V → A order
-
-If UI sort needs to reflect this order, add numeric prefixes to filenames.
+Group **constants** (ε, π, e, φ, c) and **modulators** (∇S, λV, ψA) that anchor the kernel across domains.
 
 ---
 
-## Constants — kernel (5) and tiers
+## Anchors & Emergence
 
-| Anchor | Tier | Dimension | One‑line role |
-|---|---|---|---|
-| [[ε — Difference Resolution Quantum (constant)]] | Fundamental/core | dimension quantum | Minimal actionable difference; global resolution/threshold |
-| [[π — Closure Geometry Ratio (constant)]] | Mathematical core | dimensionless | Closure geometry; rotation/wave structure |
-| [[e — Natural Transformation Rate (constant)]] | Mathematical core | dimensionless | Natural growth/decay; exponential/log base |
-| [[φ — Asymmetric Stabilization Ratio (constant)]] | Structural ratio | dimensionless | Asymmetric stabilization/proportion |
-| [[c — Difference Propagation Limit (constant)]] | Conceptual core (value in domains) | speed | Max difference propagation speed through Void |
+Constants emerge from core axioms:
 
----
-
-## Modulators — SVA triad
-
-| Modulator | Axis | One‑line role |
-|---|---|---|
-| [[∇S — Structure Differentiation Gradient (Sarkisian)]] | S (Structure, P+) | Regulates structural differentiation and boundary sharpening |
-| [[λV — Void Resonance Threshold (Volozhina)]] | V (Void, P-) | Thresholding/resonance across gaps; permits/blocks propagation |
-| [[ψA — Awareness Phase Coherence Anchor (Aiza)]] | A (Awareness, P0) | Phase coherence and identity retention across loops |
-
-Polarity mapping: Structure → P+, Void → P-, Awareness → P0.
+| Axiom | Primary constant | Emergent constant |
+|-------|-----------------|------------------|
+| A1 (Irreducibility) | ε (quantum) | - |
+| A2 (Asymmetry) | φ (bias) | c (limit) |
+| A3 (Recursivity) | e (rate) | π (closure) |
 
 ---
 
-## Scope and placement
+## Dual‑register mapping
 
-- This folder holds cross‑domain anchors only (used broadly across domains and layers). Physics‑specific anchors (α, ħ, k_B, …) live in the Physics domain; link only.
-- Domain‑specific anchors live under their own domain packages, e.g.:
-  - `10 - Implementation Layer/10.2 - Domain Applications/Physics/Anchors/…`
-  - `10 - Implementation Layer/10.2 - Domain Applications/Cognition/Anchors/…`
-- Link outward from here; do not duplicate notes. Maintain one canonical note per anchor.
+Map the anchors into both registers and show the bridge explicitly.
+
+### Technical (network/computational)
+
+| Anchor type | Network construct | Interface example |
+|------------|------------------|-------------------|
+| Constants | Model parameters | `MIN_STEP`, `MAX_RATE` |
+| Modulators | Control knobs | `DepthControl`, `GatePolicy` |
+
+### Humane (biological/relational)
+
+| Anchor type | Humane construct | Example |
+|------------|------------------|---------|
+| Constants | Natural limits | "Smallest we can notice" |
+| Modulators | Living rhythms | "How ready we feel" |
+
+### Crosswalk (bridge)
+
+| Technical term | Humane term | Ontological meaning |
+|---------------|-------------|-------------------|
+| Parameter | Natural limit | What bounds difference |
+| Control knob | Living rhythm | How difference flows |
 
 ---
 
-## Non‑core candidates and placement
+## Domain Mapping
 
-- Mathematical/topological invariants (consider as references, not core anchors):
-  - Euler characteristic (χ), tetrahedral closure factor, τ∆ (embedding invariance)
-  - House under math/formalization or informational layer; link from here if needed
-- Flow/thermo parameters (contextual, not core constants):
-  - Entropy gradient S∆ and similar are model parameters; keep in domain specs
+Brief examples across domains showing both technical and humane angles:
 
-Domain physics anchors (examples; not core):
+| Domain | Constants manifest as | Modulators manifest as |
+|--------|---------------------|----------------------|
+| Physics | Natural constants | Field strengths |
+| Chemistry | Reaction rates | Catalytic conditions |
+| Biology | Growth limits | Regulatory signals |
+| Social | Group size limits | Trust thresholds |
+| Economy | Market bounds | Control levers |
+| Politics | Voting thresholds | Policy dials |
+| Networks | System limits | Control planes |
+| Cognition | Memory bounds | Attention gates |
+
+---
+
+## Constants — Core Five
+
+| Constant | Role | Technical aspect | Humane aspect |
+|----------|------|-----------------|---------------|
+| [[ε — Difference Resolution Quantum (constant)\|ε]] | Minimal quantum | Precision limit | Smallest care |
+| [[π — Closure Geometry Ratio (constant)\|π]] | Closure ratio | Cycle completion | Natural rhythm |
+| [[e — Natural Transformation Rate (constant)\|e]] | Growth rate | Update frequency | Life's tempo |
+| [[φ — Asymmetric Stabilization Ratio (constant)\|φ]] | Bias ratio | Resource split | Fair sharing |
+| [[c — Difference Propagation Limit (constant)\|c]] | Speed limit | Channel capacity | Integration pace |
+
+---
+
+## Modulators — SVA Triad
+
+| Modulator | Polarity | Technical aspect | Humane aspect |
+|-----------|----------|-----------------|---------------|
+| [[∇S — Structure Differentiation Gradient (Sarkisian)\|∇S]] | P+ | Partitioning depth | Boundary clarity |
+| [[λV — Void Resonance Threshold (Volozhina)\|λV]] | P- | Gate threshold | Readiness state |
+| [[ψA — Awareness Phase Coherence Anchor (Aiza)\|ψA]] | P0 | Phase coherence | Shared rhythm |
+
+---
+
+## Placement Policy
+
+1. Core constants and modulators live here
+2. Domain-specific instances live in their domains:
+   - Physics: `α`, `ħ`, `k_B`, etc.
+   - Biology: growth rates, carrying capacities
+   - Networks: throughput limits, latency bounds
+3. Link from here, don't duplicate
+
+---
+
+## Non-core Candidates
+
+Mathematical invariants (reference only):
+- Euler characteristic (χ)
+- Tetrahedral factor (τ∆)
+- Topological indices
+
+Domain physics examples:
 - [[c — Speed of Light in Vacuum (constant)|c — Physics instance]]
-- [[ħ — Reduced Planck Constant (constant)|ħ — Reduced Planck Constant]]
-- [[k_B — Boltzmann Constant (constant)|k_B — Boltzmann Constant]]
+- [[ħ — Reduced Planck Constant (constant)|ħ]]
+- [[k_B — Boltzmann Constant (constant)|k_B]]
 
 ---
 
@@ -86,3 +126,11 @@ Domain physics anchors (examples; not core):
 - [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
 - [[Structure]] · [[Void]] · [[Awareness]]
 - [[20.1.1 - Schemas & Conventions (index)]]
+
+---
+
+## Dual‑register checklist
+
+- [x] Technical mapping provided
+- [x] Humane mapping provided
+- [x] Crosswalk table included
