--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.1 - Execution Environment — Ports & Boundaries/00.0.1 - Execution Environment — Ports & Boundaries (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.1 - Execution Environment — Ports & Boundaries/00.0.1 - Execution Environment — Ports & Boundaries (index).md
@@ -2,31 +2,146 @@
 type: meta
 tags:
   - "#layer/translation"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
 # 00.0.1 - Execution Environment — Ports & Boundaries (meta)
 
-> Interfaces to the outside: ingress/egress, thresholds, receptivity, and isolation surfaces.
+> Interfaces to the outside: how difference crosses boundaries through ports, gates, and surfaces.
+> Manages ingress/egress, thresholds, receptivity, and isolation.
 
 ---
 
 ## Scope
 
-- Ports and interfaces; ingress/egress semantics
-- Boundary exposure and transparency
-- Receptivity thresholds and ignition/collapse conditions
+The execution environment defines how structure interacts with its environment:
+
+1. Ports and interfaces (ingress/egress points)
+2. Boundary conditions (transparency/opacity)
+3. Receptivity thresholds (ignition/collapse)
+4. Isolation surfaces (protection/exposure)
 
 ---
 
-## Anchors
+## Dual‑register mapping
 
-- λV — Volozhina Resonance Threshold (Void)
+Map the environment into both registers and show the bridge explicitly.
+
+### Technical (network/computational)
+
+| Environment concept | Network construct | Interface example |
+|-------------------|------------------|-------------------|
+| Port | Protocol endpoint | `Port`, `Socket` |
+| Gate | Rate limiter | `RateLimit`, `Breaker` |
+| Surface | Exposure policy | `Policy`, `ACL` |
+| Memory | State retention | `Cache`, `Buffer` |
+
+### Humane (biological/relational)
+
+| Environment concept | Humane construct | Example |
+|-------------------|------------------|----------|
+| Port | Opening/boundary | Where we meet |
+| Gate | Readiness/consent | "Not now" |
+| Surface | Selective sharing | What we show |
+| Memory | Living history | What we keep |
+
+### Crosswalk (bridge)
+
+| Technical term | Humane term | Ontological meaning |
+|---------------|-------------|-------------------|
+| Interface | Boundary | Where difference crosses |
+| Rate limit | Tolerance | Safe flow bound |
+| Policy | Readiness | What can enter |
+| Buffer | History | What persists |
+
+---
+
+## Domain Mapping
+
+Brief examples across domains showing both technical and humane angles:
+
+| Domain | Technical manifestation | Humane manifestation |
+|--------|------------------------|---------------------|
+| Physics | Field interface | Natural boundary |
+| Chemistry | Reaction surface | Chemical contact |
+| Biology | Cell membrane | Living boundary |
+| Social | Group interface | Trust boundary |
+| Economy | Market access | Value gateway |
+| Politics | Legal boundary | Power surface |
+| Networks | Protocol port | System edge |
+| Cognition | Attention filter | Mind's door |
+
+---
+
+## Core Operations
+
+The environment provides four key operations:
+
+1. **Ingress Control**
+   - Technical: Rate limiting, validation
+   - Humane: Selective acceptance, consent
+
+2. **Egress Shaping**
+   - Technical: Backpressure, throttling
+   - Humane: Measured sharing, boundaries
+
+3. **Surface Management**
+   - Technical: Exposure policy, ACLs
+   - Humane: Trust boundaries, privacy
+
+4. **State Retention**
+   - Technical: Caching, buffering
+   - Humane: Memory, continuity
+
+---
+
+## Stability Conditions
+
+Key invariants that must be maintained:
+
+| Condition | Technical aspect | Humane aspect |
+|-----------|-----------------|---------------|
+| Safe flow | Rate ≤ capacity | Within tolerance |
+| Coherence | State consistency | Memory integrity |
+| Protection | Access control | Trust boundary |
+| Recovery | Circuit breaker | Rest/cooldown |
+
+---
+
+## Modulator Influence
+
+Environment is primarily shaped by λV (Void resonance):
+
+| Aspect | λV influence |
+|--------|-------------|
+| Threshold | Sets ignition/absorption point |
+| Hysteresis | Controls on/off separation |
+| Backpressure | Manages overload protection |
+| Sensitivity | Tunes receptivity level |
+
+Secondary influences:
+- ∇S: Boundary sharpness/granularity
+- ψA: State retention/coherence
+
+---
+
+## Design rationale
+
+The execution environment must be intelligible in both technical and humane registers per governance (see [PRINCIPLES.md](../../../../PRINCIPLES.md)). Each aspect maintains its dual nature without reduction to either register.
 
 ---
 
 ## See Also
 
-- [[Field]] · [[Void]] · [[Structure]] · [[Awareness]]
-- [[types]] · [[tags]]
+- [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
+- [[00.0.2 - Coherence Orchestration — Identity & Memory (index)]]
+- [[Structure]] · [[Void]] · [[Awareness]]
+
+---
+
+## Dual‑register checklist
+
+- [x] Technical mapping provided
+- [x] Humane mapping provided
+- [x] Crosswalk table included
