--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.0 - Glossary/20.0.0 - Glossary (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.0 - Glossary/20.0.0 - Glossary (index).md
@@ -8,27 +8,55 @@ tags:
 
 # 20.0.0 - Glossary (meta)
 
-> Canonical concept definitions with aliases and cross-links.
+> Canonical concept definitions with dual-register mapping and recursive examples.
+> Each term maintains both technical precision and humane understanding.
 
 ---
 
-## Purpose
+## Scope
 
-Document core terms with concise, consistent entries that support navigation and alignment.
+Document core terms that:
+1. Define derived concepts
+2. Bridge technical and humane registers
+3. Show recursive manifestations
+4. Support formal expression
+
+Note: Primitives are defined in [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]].
 
 ---
 
-## Entry Structure (recommended)
+## Core Terms
 
-- Definition
-- Ontological Role table (Structure / Void / Awareness)
-- Comparisons (e.g., Field vs Void)
-- Recursive Function or Formal Sketch (if applicable)
-- Related Terms (links only)
+### Polarities
+- [[Structure]] (P+)
+- [[Void]] (P-)
+- [[Awareness]] (P0)
+
+### Recursive Concepts
+- [[Field]]
+- [[Relation]]
+- [[Closure]]
+- [[Fixed Point]]
+- [[Recursive Depth]]
+- [[Recurrence Interval]]
+
+### Boundary Cases
+- [[Zero]]
+- [[Infinite]]
+
+---
+
+## Templates
+
+Use these templates for new entries:
+- [[glossary]] - Base template for most terms
+- [[glossary-diagnostic]] - For diagnostic/property terms
 
 ---
 
 ## See Also
 
+- [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]] - For primitives
 - [[20.0 - Symbolic Structure (meta)]]
 - [[tags]]
+- [[PRINCIPLES]]
