--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.1 - Form Classifications/20.0.1 - Form Classifications (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.1 - Form Classifications/20.0.1 - Form Classifications (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,20 +12,38 @@ tags:
 
 ---
 
-## Classes
+## Classification Framework
 
-| Class | One‑liner |
-|---|---|
-| [[Stable Form (classification)]] | Fully stabilized across embedding layers; persists under perturbation |
-| [[Apparent Form (classification)]] | Looks coherent locally but hides internal collapse/fragmentation |
-| [[Collapsed Form (classification)]] | Fails stabilization; differences dissipate or implode |
-| [[Pseudo Form (classification)]] | Performative/illusory coherence; no closure support across layers |
+| Class | Description | Key Diagnostic |
+|-------|-------------|----------------|
+| [[Stable Form (classification)]] | Fully stabilized across embedding layers | Persists under perturbation |
+| [[Apparent Form (classification)]] | Looks coherent but hides instability | Hidden layer collapse |
+| [[Collapsed Form (classification)]] | Fails stabilization completely | Difference dissipation |
+| [[Pseudo Form (classification)]] | Performative/illusory coherence | No closure support |
+
+Each classification provides:
+- Technical and humane diagnostic criteria
+- Scale-dependent manifestations
+- Failure mode patterns
+- Operational tests
 
 ---
 
-## See Also
+## Core References
 
-- [[Form]] · [[Stabilization (Closure)]] · [[Relation]]
-- Anchors: [[ε — Difference Resolution Quantum (constant)]], [[π — Closure Geometry Ratio (constant)]], [[e — Natural Transformation Rate (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]], [[c — Difference Propagation Limit (constant)]]
-- Modulators: [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+Primitives:
+- [[Form]]
+- [[Stabilization (Closure)]]
+- [[Relation]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
