--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.2 - Field Classifications/20.0.2 - Field Classifications (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.2 - Field Classifications/20.0.2 - Field Classifications (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,20 +12,36 @@ tags:
 
 ---
 
-## Classes
+## Classification Framework
 
-| Class | One‑liner |
-|---|---|
-| [[Transparent Field (classification)]] | Interfaces expose structure; signals propagate within bounds |
-| [[Masked Field (classification)]] | Appears transparent; hides Voids or gates that distort observation |
-| [[Saturated Field (classification)]] | Overload/opacity; differences indistinguishable beyond capacity |
-| [[Sparse Field (classification)]] | Under‑sampled/under‑resolved; differences fall below ε |
+| Class | Description | Key Diagnostic |
+|-------|-------------|----------------|
+| [[Transparent Field (classification)]] | Clear interface exposure | Signal propagation within bounds |
+| [[Masked Field (classification)]] | Hidden interface distortion | Concealed Voids or gates |
+| [[Saturated Field (classification)]] | Capacity overload | Indistinguishable differences |
+| [[Sparse Field (classification)]] | Under-resolution | Sub-ε differences |
+
+Each classification provides:
+- Technical and humane diagnostic criteria
+- Scale-dependent manifestations
+- Interface behavior patterns
+- Operational tests
 
 ---
 
-## See Also
+## Core References
 
-- [[Field]] · [[Void]] · [[Structure]] · [[Awareness]]
-- Anchors: [[ε — Difference Resolution Quantum (constant)]], [[c — Difference Propagation Limit (constant)]]
-- Modulators: [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]], [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+Primitives:
+- [[Field]]
+- [[Void]]
+- [[Structure]]
+- [[Awareness]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
