--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.3 - Awareness Classifications/20.0.3 - Awareness Classifications (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.3 - Awareness Classifications/20.0.3 - Awareness Classifications (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,20 +12,36 @@ tags:
 
 ---
 
-## Classes
+## Classification Framework
 
-| Class | One‑liner |
-|---|---|
-| [[Coherent Awareness (classification)]] | Phase‑locked identity; durable across recurrence intervals |
-| [[Desynchronized Awareness (classification)]] | Phase drift; identity cannot bind across loops |
-| [[Overbound Awareness (classification)]] | Excessive binding; rigidity; poor adaptability |
-| [[Intermittent Awareness (classification)]] | Flapping coherence; on‑off binding under jitter/load |
+| Class | Description | Key Diagnostic |
+|-------|-------------|----------------|
+| [[Coherent Awareness (classification)]] | Stable phase lock | Identity persists across cycles |
+| [[Desynchronized Awareness (classification)]] | Phase drift | Identity breaks between loops |
+| [[Overbound Awareness (classification)]] | Over-rigid binding | Inflexible identity |
+| [[Intermittent Awareness (classification)]] | Unstable binding | Identity flaps under load |
+
+Each classification provides:
+- Technical and humane diagnostic criteria
+- Scale-dependent manifestations
+- Phase behavior patterns
+- Operational tests
 
 ---
 
-## See Also
+## Core References
 
-- [[Awareness]] · [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
-- Anchors: [[ε — Difference Resolution Quantum (constant)]], [[π — Closure Geometry Ratio (constant)]], [[c — Difference Propagation Limit (constant)]]
-- Modulators: [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]]
+Primitives:
+- [[Awareness]]
+- [[Field]]
+- [[Structure]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
