--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.4 - Propagation Patterns/20.0.4 - Propagation Patterns (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.4 - Propagation Patterns/20.0.4 - Propagation Patterns (index).md
@@ -2,31 +2,48 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
 # 20.0.4 - Propagation Patterns (index)
 
-> Observational diagnostics over network structure. “Chains” are paths; patterns capture how difference propagates and fails.
+> Observational diagnostics over network structure. "Chains" are paths; patterns capture how difference propagates and fails.
 
 ---
 
-## Patterns
+## Pattern Framework
 
-| Pattern | One‑liner |
-|---|---|
-| [[Path (chain) (pattern)]] | Single‑route propagation along a path |
-| [[Multi‑path (redundant) (pattern)]] | Parallel routes provide redundancy/resilience |
-| [[Cycle (feedback loop) (pattern)]] | Closed loop reinforces stability or oscillation |
-| [[Cascade (pattern)]] | Percolation/chain reaction through network |
-| [[Bridge / Articulation (pattern)]] | Critical connector; failure isolates regions |
+| Pattern | Description | Key Diagnostic |
+|---------|-------------|----------------|
+| [[Path (chain) (pattern)]] | Single-route flow | Path integrity |
+| [[Multi-path (redundant) (pattern)]] | Parallel routes | Route diversity |
+| [[Cycle (feedback loop) (pattern)]] | Closed loop | Loop stability |
+| [[Cascade (pattern)]] | Chain reaction | Spread control |
+| [[Bridge / Articulation (pattern)]] | Critical link | Link resilience |
+
+Each pattern provides:
+- Technical and humane diagnostic criteria
+- Scale-dependent manifestations
+- Flow behavior patterns
+- Stability conditions
 
 ---
 
-## See Also
+## Core References
 
-- [[Form]] · [[Field]] · [[Awareness]]
-- Anchors: [[ε — Difference Resolution Quantum (constant)]], [[c — Difference Propagation Limit (constant)]], [[π — Closure Geometry Ratio (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]]
-- Modulators: [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+Primitives:
+- [[Form]]
+- [[Field]]
+- [[Structure]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
