--- a/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (index).md
+++ b/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (index).md
@@ -14,14 +14,19 @@ tags:
 
 ## Purpose
 
-Provide drop-in skeletons (frontmatter + sections) for each note type (e.g., `primitive`, `interface`, `bridge`).
+Provide drop-in skeletons (frontmatter + sections) for each note type. Templates are dual‑register aware (technical ↔ humane) where relevant.
 
 ---
 
 ## Contents
 
-- `primitive.md` — core primitives template (with Network mapping section)
-- Future: `interface.md`, `bridge.md`, `glossary.md`
+- `primitive.md` — core primitives template (with Dual‑register mapping and crosswalk)
+- `modulator.md` — SVA modulators template (dual‑register, base constants, coupling)
+- `constant.md` — conceptual anchors (concept vs instances; dual‑register note)
+- `axiom.md` — kernel axioms; includes governance register note
+- `glossary.md` — base glossary template (Ontological Role, Comparisons)
+- `glossary-diagnostic.md` — diagnostic/classification sub‑template (anchors, SVA coupling, checklist)
+- Future: `interface.md`, `bridge.md`
 
 ---
 
